<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2011-2026 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>60</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.maven</groupId>
    <artifactId>htmlcompressor-maven-plugin</artifactId>
    <version>1.13.1-SNAPSHOT</version>
    <packaging>maven-plugin</packaging>

    <name>htmlcompressor-maven-plugin</name>
    <description>Maven HTMLCompressor Plugin allows to compress html/xml by adding a few lines to the pom file.</description>
    <url>https://github.com/hazendaz/htmlcompressor-maven-plugin</url>
    <inceptionYear>2011</inceptionYear>

    <organization>
        <name>hazendaz</name>
        <url>https://github.com/hazendaz/</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>manual</distribution>
            <comments>Maven HTMLCompressor Plugin is distributed under Apache License 2.0</comments>
        </license>
    </licenses>

    <prerequisites>
        <maven>3.6.3</maven>
    </prerequisites>

    <scm>
        <connection>scm:git:ssh://git@github.com/hazendaz/htmlcompressor-maven-plugin.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/htmlcompressor-maven-plugin.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/htmlcompressor-maven-plugin</url>
    </scm>
    <issueManagement>
        <system>GitHub Issue Tracking</system>
        <url>https://github.com/hazendaz/htmlcompressor-maven-plugin/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Github</system>
        <url>https://github.com/hazendaz/htmlcompressor-maven-plugin/actions</url>
    </ciManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/hazendaz/htmlcompressor-maven-plugin.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>21</java.version>
        <java.release.version>21</java.release.version>

        <!-- Keep javadocs in legacy mode as various issues in closure-compiler preventing update. -->
        <javadoc.java.release.version>21</javadoc.java.release.version>
        <javadoc.legacy.mode>true</javadoc.legacy.mode>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.htmlcompressor.maven.plugin</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1765063946</project.build.outputTimestamp>

        <!-- External Modules -->
        <checker-qual.version>4.1.0</checker-qual.version>
        <maven-plugin.version>3.15.2</maven-plugin.version>
        <slf4j.version>2.0.18</slf4j.version>
    </properties>

    <dependencyManagement>
       <dependencies>
           <!-- Checker Framework -->
           <dependency>
               <groupId>org.checkerframework</groupId>
               <artifactId>checker-qual</artifactId>
               <version>${checker-qual.version}</version>
           </dependency>
       
           <!-- SLF4J API -->
           <dependency>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-api</artifactId>
               <version>${slf4j.version}</version>
           </dependency>
       </dependencies>
    </dependencyManagement>
       
    <dependencies>
        <dependency>
            <groupId>com.github.hazendaz</groupId>
            <artifactId>htmlcompressor</artifactId>
            <version>1.13.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.javascript</groupId>
            <artifactId>closure-compiler</artifactId>
            <version>v20251216</version>
        </dependency>
        <dependency>
            <groupId>com.yahoo.platform.yui</groupId>
            <artifactId>yuicompressor</artifactId>
            <version>2.4.8</version>
            <exclusions>
                <exclusion>
                    <groupId>rhino</groupId>
                    <artifactId>js</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>1.9.1</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>2.3.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
            <version>2.4.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.9.16</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.15.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Override the following -->
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
            <version>4.0.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-xml</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <show>private</show>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>${maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-descriptor</id>
                        <goals>
                            <goal>descriptor</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>help-goal</id>
                        <goals>
                            <goal>helpmojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-report-plugin</artifactId>
                <version>${maven-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>

</project>
